WebVR: add explicit texture delete, fix formatting

BUG=703049

Review-Url: https://codereview.chromium.org/2759943003
Cr-Commit-Position: refs/heads/master@{#458223}